--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -6,6 +6,7 @@
         text-transform: uppercase;
         text-decoration: none;
         color: $color-text;
+        letter-spacing: 3px;
     }
 
     &__menu {
