--- a/styles/sass/layouts/_header.scss
+++ b/styles/sass/layouts/_header.scss
@@ -1,8 +1,10 @@
 .header {
     position: relative;
+    margin-bottom: 10rem;
 
     &__text-box {
         text-align: center;
+        margin: 10rem 0;
     }
 
     &__image-box {
